// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stats should render the stats component with a blank description 1`] = `
<div
  className="stats"
>
  <div
    className="stats__content"
  >
    <ReactMarkdown
      containerTagName="div"
      parserOptions={Object {}}
      source="Hello, world."
    />
  </div>
  <div
    className="stats__footer"
  >
    <div
      className="stats__info"
    >
      <span />
      <br />
      <span />
      <br />
      <span />
      <br />
    </div>
    <div
      className="stats__info"
    >
      <span />
      <br />
      <span>
        /
      </span>
      <br />
      <span>
         
      </span>
    </div>
  </div>
</div>
`;

exports[`Stats should render the stats component with the given description 1`] = `
<div
  className="stats"
>
  <div
    className="stats__content"
  >
    <ReactMarkdown
      containerTagName="div"
      parserOptions={Object {}}
      source=""
    />
  </div>
  <div
    className="stats__footer"
  >
    <div
      className="stats__info"
    >
      <span />
      <br />
      <span />
      <br />
      <span />
      <br />
    </div>
    <div
      className="stats__info"
    >
      <span />
      <br />
      <span>
        /
      </span>
      <br />
      <span>
         
      </span>
    </div>
  </div>
</div>
`;
